updated graphs. Added 1c

--- a/assignment2/report/gudjon_a2.tex
+++ b/assignment2/report/gudjon_a2.tex
@@ -61,30 +61,30 @@ the points $(n-2, log E_{n-2}), (n, log E_n)$.
 
 \begin{minipage}{\linewidth}
 \begin{lstlisting}
-N: 4   E: 1.6581      S: -0.91944
-N: 6   E: 0.60969     S: -1.0005
-N: 8   E: 0.2606      S: -0.84995
-N: 10  E: 0.11235     S: -0.84139
-N: 12  E: 0.046269    S: -0.88712
-N: 14  E: 0.018576    S: -0.91262
-N: 16  E: 0.0078078   S: -0.86673
-N: 18  E: 0.0032452   S: -0.87796
-N: 20  E: 0.001331    S: -0.89126
-N: 22  E: 0.00054384  S: -0.89501
-N: 24  E: 0.00022618  S: -0.87733
-N: 26  E: 9.3312e-05  S: -0.88537
-N: 28  E: 3.8287e-05  S: -0.89084
-N: 30  E: 1.5764e-05  S: -0.8874
-N: 32  E: 6.5138e-06  S: -0.88379
-N: 34  E: 2.6821e-06  S: -0.88731
-N: 36  E: 1.1014e-06  S: -0.89004
-N: 38  E: 4.5448e-07  S: -0.88516
-N: 40  E: 1.8723e-07  S: -0.8868
-N: 42  E: 7.7184e-08  S: -0.88617
-N: 44  E: 3.1691e-08  S: -0.89016
-N: 46  E: 1.3085e-08  S: -0.88456
-N: 48  E: 5.3855e-09  S: -0.88774
-N: 50  E: 2.2195e-09  S: -0.88644
+N: 4   E: 1.6581      S: -0.45972
+N: 6   E: 0.60969     S: -0.50024
+N: 8   E: 0.2606      S: -0.42498
+N: 10  E: 0.11235     S: -0.4207
+N: 12  E: 0.046269    S: -0.44356
+N: 14  E: 0.018576    S: -0.45631
+N: 16  E: 0.0078078   S: -0.43337
+N: 18  E: 0.0032452   S: -0.43898
+N: 20  E: 0.001331    S: -0.44563
+N: 22  E: 0.00054384  S: -0.4475
+N: 24  E: 0.00022618  S: -0.43867
+N: 26  E: 9.3312e-05  S: -0.44268
+N: 28  E: 3.8287e-05  S: -0.44542
+N: 30  E: 1.5764e-05  S: -0.4437
+N: 32  E: 6.5138e-06  S: -0.44189
+N: 34  E: 2.6821e-06  S: -0.44366
+N: 36  E: 1.1014e-06  S: -0.44502
+N: 38  E: 4.5448e-07  S: -0.44258
+N: 40  E: 1.8723e-07  S: -0.4434
+N: 42  E: 7.7184e-08  S: -0.44308
+N: 44  E: 3.1691e-08  S: -0.44508
+N: 46  E: 1.3085e-08  S: -0.44228
+N: 48  E: 5.3855e-09  S: -0.44387
+N: 50  E: 2.2195e-09  S: -0.44322
 \end{lstlisting}
 \end{minipage}
 
@@ -154,6 +154,36 @@ In this case $\alpha = -0.18374$ and $C = 1.04$.
 \end{figure}
 
 \subsection{} %% 2c
+
+% U1
+\begin{minipage}{\linewidth}
+\begin{lstlisting}
+N: 4   E: 0.48476  S: -0.26463
+N: 6   E: 0.42788  S: -0.30784
+N: 8   E: 0.3902   S: -0.32043
+N: 10  E: 0.36288  S: -0.32529
+N: 12  E: 0.34177  S: -0.32863
+N: 14  E: 0.32486  S: -0.32917
+N: 16  E: 0.31085  S: -0.33019
+N: 18  E: 0.29897  S: -0.33097
+N: 20  E: 0.28859  S: -0.33527
+\end{lstlisting}
+\end{minipage}
+
+% U2
+\begin{minipage}{\linewidth}
+\begin{lstlisting}
+N: 4   E: 0.21655   S: -0.6285
+N: 6   E: 0.1661    S: -0.65417
+N: 8   E: 0.13736   S: -0.66042
+N: 10  E: 0.11847   S: -0.66293
+N: 12  E: 0.10496   S: -0.66444
+N: 14  E: 0.094735  S: -0.66463
+N: 16  E: 0.086682  S: -0.66528
+N: 18  E: 0.080119  S: -0.66843
+N: 20  E: 0.074692  S: -0.66581
+\end{lstlisting}
+\end{minipage}
 
 \section{} %% Problem 3
 
