Added 2c bs to the report

--- a/assignment2/report/gudjon_a2.tex
+++ b/assignment2/report/gudjon_a2.tex
@@ -97,7 +97,7 @@ N: 50  E: 2.2195e-09  S: -0.44322
 
 
 \subsection{} %% 1c
-Derp
+The function $f(z) = (1.1 - \frac{1}{2}(z + z^{-1}))^{-1}$ has two non-continuous jumps, where $z = 0.641742$ and $z = 1.55826$. Those are the values of $\rho$ and $\rho^{-1}$ that define the region of convergence.
 
 \subsection{} %% 1d
 
@@ -155,7 +155,26 @@ In this case $\alpha = -0.18374$ and $C = 1.04$.
 
 \subsection{} %% 2c
 
+\begin{figure}
+    \begin{subfigure}[t]{.49\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{u1_err_alpha}
+        \caption{$u_1$}
+    \end{subfigure}\hfill
+    \begin{subfigure}[t]{.49\textwidth}
+        \centering
+        \includegraphics[width=\linewidth]{u2_err_alpha}
+        \caption{$u_2$}
+    \end{subfigure}
+    \label{u2_err_alpha}
+\end{figure}
+
 % U1
+This shows the output when estimating the interpolation error $\norm{u-p_n}_{\infty}$. $u(x) = \abs{x}^{1/3}$.
+N is the degree of the polynomial. E is the log of the error. S is the slope between 
+the points $(log(n-2), logE_{n-2}), (logn, logE_n)$.
+
+\noindent
 \begin{minipage}{\linewidth}
 \begin{lstlisting}
 N: 4   E: 0.48476  S: -0.26463
@@ -170,7 +189,13 @@ N: 20  E: 0.28859  S: -0.33527
 \end{lstlisting}
 \end{minipage}
 
+
 % U2
+\noindent
+This shows the output when estimating the interpolation error for $u(x) = \abs{x+1}^{1/3}$.
+
+
+\noindent
 \begin{minipage}{\linewidth}
 \begin{lstlisting}
 N: 4   E: 0.21655   S: -0.6285
